--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "ownerNumber": ["6289697488609@s.whatsapp.net", "6288804947282@s.whatsapp.net],
   "ownerName": ["Tachibana Yuzi ×፝֟͜×", "HumanzzZ"],
-  "botName": "𝙶𝚊𝚠𝚛 𝙶𝚞𝚛𝚊,
+  "botName": "𝙶𝚊𝚠𝚛 𝙶𝚞𝚛𝚊",
   "sessionName": "session",
   "pathimg": "./storage/media/neobot.png",
   "gamewaktu": 90,
